とりあえず今日の本数カウンタは動く。ログはまだ。だいぶクチャクチャなんだが、まあそのうちなんとかするかも

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 	</div>
       </div>
       <div id="zenkai-kara">前回からの経過時間: <span id="timer"></span></div>
+      <div>
+	今日吸った本数&nbsp;<span id="hon-today">0</span>&nbsp;&nbsp;&nbsp;&nbsp;
+	<button id="hon-log">ログ</button>
+      </div>
     </div>
     <div id="history"></div>
 </body>
