--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 	  <button id="btn-demo-suu">それでも吸う</button>
 	</div>
       </div>
-      <div id="zenkai-kara">前回からの経過時間: <span id="timer"></span></div>
+      <div id="zenkai-kara">前回からの経過時間<br/>
+	<span id="timer"></span>
+      </div>
       <div>
 	今日吸った本数&nbsp;<span id="hon-today">0</span>&nbsp;&nbsp;&nbsp;&nbsp;
 	<button id="hon-log">ログ</button>
