--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head><body>
 
     <div id="main">
-      <div>
+      <div class="center">
 	<button id="btn-sutta">吸う</button>
       </div>
       <div id="congratuations">よくやった！権兵衛</div>
